feat: support JPMS